Grease Pencil populate draw manager method is not called when Cycles Render mode with Overlays OFF #65191

Closed
opened 2019-05-27 18:07:48 +02:00 by Antonio Vazquez · 9 comments

Last source compiled at 27/05/2019

I have tested with prints the populate method and when set Cycles render and disable overlays, the method never is called.

I have tested with a simple Suzanne 2D

To reproduce.

  1. Open default scene
  2. Add Suzanne 2D
  3. Set to Cycles
  4. Set Render View mode
  5. Disable overlays
Last source compiled at 27/05/2019 I have tested with prints the populate method and when set Cycles render and disable overlays, the method never is called. I have tested with a simple Suzanne 2D To reproduce. 1) Open default scene 2) Add Suzanne 2D 3) Set to Cycles 4) Set Render View mode 5) Disable overlays
Author
Member

Added subscriber: @antoniov

Added subscriber: @antoniov

#65051 was marked as duplicate of this issue

#65051 was marked as duplicate of this issue
Brecht Van Lommel was assigned by Antonio Vazquez 2019-05-27 18:08:51 +02:00
Author
Member

Added subscribers: @fclem, @brecht

Added subscribers: @fclem, @brecht
Author
Member

Not sure if this is for @brecht or @fclem because is related to Draw Manager.

Not sure if this is for @brecht or @fclem because is related to Draw Manager.
Brecht Van Lommel was unassigned by Clément Foucault 2019-05-27 18:37:15 +02:00
Jeroen Bakker was assigned by Clément Foucault 2019-05-27 18:37:15 +02:00

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker

This was introduce by @Jeroen-Bakker If I recall correctly. Cycles without overlays skips the cache populate phase as it has no benefit from doing so. Maybe we need to add an exception for GPencil?

This was introduce by @Jeroen-Bakker If I recall correctly. Cycles without overlays skips the cache populate phase as it has no benefit from doing so. Maybe we need to add an exception for GPencil?
Member

Yes, that would be the cause.

The original idea was that we would limit the loop as it was not needed and add some speedup for heavy scenes.
The challenge is that in order to detect if GPencil is needed we have to loop over all objects and check if there is an GP object. The simple implementation will need to loop in average over 50% of the objects doing a Object type check.
I see the next options.

  1. Go back to the old situation. where objects are always looped over.
  2. Use the object_type_exclusion_filter. Not sure as this is quite hidden and GPobjects are visible by default.
  3. Add a precheck to see if we have any GPencil object.
  • Loop over all objects in the DEG scene and find out if there is any GPencil Object.
  • Building something like DEG statistics could remove the extra loop over the objects, but not sure we have such capability and if it fits in the DEG architecture. This can be used to remove the selection of GPencil Drawing engine at all.

@brecht What do you think would be the best solution for the 2.80 release?

I tried to come up with a solution that currently works, and limits the need to loop over the objects as much as possible with the current tooling. D4962

Yes, that would be the cause. The original idea was that we would limit the loop as it was not needed and add some speedup for heavy scenes. The challenge is that in order to detect if GPencil is needed we have to loop over all objects and check if there is an GP object. The simple implementation will need to loop in average over 50% of the objects doing a Object type check. I see the next options. 1. Go back to the old situation. where objects are always looped over. 2. Use the `object_type_exclusion_filter`. Not sure as this is quite hidden and GPobjects are visible by default. 3. Add a precheck to see if we have any GPencil object. - Loop over all objects in the DEG scene and find out if there is any GPencil Object. - Building something like DEG statistics could remove the extra loop over the objects, but not sure we have such capability and if it fits in the DEG architecture. This can be used to remove the selection of GPencil Drawing engine at all. @brecht What do you think would be the best solution for the 2.80 release? I tried to come up with a solution that currently works, and limits the need to loop over the objects as much as possible with the current tooling. [D4962](https://archive.blender.org/developer/D4962)
Member

Added subscribers: @asuralhp, @lichtwerk

Added subscribers: @asuralhp, @lichtwerk
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65191
No description provided.