source/blender/depsgraph/intern/depsgraph.cc
@@ -38,6 +38,7 @@
 extern "C" {
 #include "BKE_scene.h"
 #include "BKE_global.h"
+#include "BKE_idcode.h"
 }
 
 #include "DEG_depsgraph.h"
@@ -81,6 +82,7 @@ Depsgraph::Depsgraph(Scene *scene, ViewLayer *view_layer, eEvaluationMode mode)
   entry_tags = BLI_gset_ptr_new("Depsgraph entry_tags");
   debug_flags = G.debug;
   memset(id_type_updated, 0, sizeof(id_type_updated));
+  memset(id_type_exist, 0, sizeof(id_type_exist));
   memset(physics_relations, 0, sizeof(physics_relations));
 }
 
@@ -130,6 +132,8 @@ IDNode *Depsgraph::add_id_node(ID *id, ID *id_cow_hint)
      * referencing to. */
     BLI_ghash_insert(id_hash, id, id_node);
     id_nodes.push_back(id_node);
+
+    id_type_exist[BKE_idcode_to_index(GS(id->name))] = 1;
   }
   return id_node;
 }
